--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Michael Parkadze",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.716.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
